# tdd-kata

./: .gitignore  .python-version  LICENSE.md  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
tdd_kata/: string_calculator.py
tests/: test_string_calculator.py
