[tool.poetry]
name = "tdd-kata"
version = "0.1.0"
description = ""
authors = ["sjk <18274655+sejkimm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tdd_kata"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
tox = "^3.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
